readjusted box positioning for my show grid so as it was previously mbeing shifted significantly when a move was submitted. Realised there is a bug where the grid doesnt reset upon losing a game

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,28 @@
  *= require_tree .
  *= require_self
  */
+
+ 
  body {
   font-family: 'Armata', sans-serif;
+  background: #5B77A1;
+ }
+
+ .show-title {
+  font-size: 50px;
+  padding: 10px;
+ }
+
+ .navmenu {
+  padding: 10px;
+  text-align: center;
+ }
+
+ .nav-menu-links {
+  font-size: 20px;
+ }
+
+ .welcome-message {
+  background: #C43737;
+  padding: 10px;
  }
