--- a/app/assets/stylesheets/ttt.css
+++ b/app/assets/stylesheets/ttt.css
@@ -4,6 +4,7 @@
 }
 
 .grid-separator {
+  position: relative;
   text-align: center;
   margin: 0 auto;
   display: inline-block;
@@ -19,14 +20,32 @@
 }
 
 .show-grid-value {
+  position: absolute;
   margin: 0 auto;
   font-size: 60px;
   text-align: center;
   margin: 0;
 }
 
-/*.submit-move {
-  width: 100px;
+.submit-move {
+  padding: 10px;
+}
+
+.submit-button {
+  margin: 0 auto;
   color: green;
-}*/
+  font-size: 20px;
+  width: 200px;
+}
+
+.submit {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+
+.radio-button {
+  display: none;
+}
 
